<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailMovies">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayoutId"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingLayoutId"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:contentScrim="#001D30"
            app:expandedTitleGravity="bottom"
            app:expandedTitleMarginEnd="15dp"
            app:expandedTitleMarginStart="20dp"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/app_name">

            <ImageView
                android:id="@+id/sampul_cover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sampul_red"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_overlay">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="end"
                android:paddingEnd="20dp"
                tools:ignore="RtlSymmetry">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/cover_mvs"
                        android:layout_width="90dp"
                        android:layout_height="140dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/red"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.7" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarId"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleMovie"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="16dp"
                android:text="@string/dtl_judul"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@id/titleMovie"
                android:text="@string/rating" />


            <ImageButton
                android:id="@+id/action_share"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignEnd="@+id/genre"
                android:layout_alignBottom="@+id/genre"
                android:layout_gravity="left"
                android:layout_marginEnd="-169dp"
                android:layout_marginBottom="11dp"
                android:background="#00FFFFFF"
                android:scaleType="fitXY"
                android:src="@drawable/arrows_shares" />

            <TextView
                android:id="@+id/realeseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleMovie"
                android:layout_marginStart="14dp"
                android:text="@string/tanggal_rilis" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleMovie"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@id/realeseDate"
                android:text="|" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleMovie"
                android:layout_marginBottom="8dp"
                android:layout_toRightOf="@id/separator"
                android:text="@string/genre_action" />


            <TextView
                android:id="@+id/overview"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/realeseDate"
                android:layout_marginStart="14dp"
                android:layout_marginTop="32dp"
                android:text="@string/overview"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/overview"
                android:layout_marginStart="14dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="14dp"
                android:lineSpacingMultiplier="1.25"
                android:text="@string/dtl_deskripsi" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/rounded_tv"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="Watch"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>